--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 :root {
     --main-color: rgb(41, 60, 120);
     --main-color-dark: #0b1f64;
+    --highlight: #8ac640
 }
 
 
@@ -54,7 +55,7 @@ nav a, nav a:hover {
 .navlinks a:hover::after {
     content: "";
     position: absolute;
-    background-color: forestgreen;
+    background-color: var(--highlight);
     width: 5px;
     left: 0;
     top: 0;
@@ -136,6 +137,31 @@ td {
 }
 
 /* Form CSS */
+.sections {
+    display: flex;
+    justify-content: space-between;
+    margin-right: 20px;
+}
+
+.sections span {
+    cursor: pointer;
+    padding: 0 0 0.5em 0;
+}
+
+.currentTab {
+    position: relative;
+}
+
+.currentTab::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: var(--highlight);
+}
+
 form > div {
     display: flex;
 }
