--- a/src/App.css
+++ b/src/App.css
@@ -52,15 +52,15 @@ nav a, nav a:hover {
     background-color: var(--main-color-dark);
 }
 
-    .navlinks a:hover::after, .navlinks a:focus::after {
-        content: "";
-        position: absolute;
-        background-color: var(--highlight);
-        width: 5px;
-        left: 0;
-        top: 0;
-        bottom: 0;
-    }
+.navlinks a:hover::after, .navlinks a:focus::after {
+    content: "";
+    position: absolute;
+    background-color: var(--highlight);
+    width: 5px;
+    left: 0;
+    top: 0;
+    bottom: 0;
+}
 
 /*------MAIN SECTION------*/
 nav + div {
@@ -120,6 +120,7 @@ nav + div {
     border-radius: 5px;
     color: var(--main-color);
     padding: 5px;
+    cursor: pointer;
 }
 
 .filters input {
@@ -127,6 +128,25 @@ nav + div {
     border-radius: 5px;
     padding: 1em 0.5em;
     width: 35%;
+}
+
+.filters span {
+    position: relative;
+}
+
+.filters span::after {
+    content: "";
+    display: block;
+    background: url('/search.png') 0 0 no-repeat;
+    background-size: 100% 100%;
+    background-position: center center;
+    height: 20px;
+    width: 20px;
+    pointer-events: none;
+
+    position: absolute;
+    top: 3px;
+    right: 20px;
 }
 
 /*------TABLE------*/
