--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ button {
           -ms-user-select: none; /* Internet Explorer/Edge */
               user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome, Opera and Firefox */
-  }
+}
 
 /* ------NAVIGATION------ */
 nav {
@@ -234,7 +234,11 @@ form > div > div {
 
 form > div > div:not(:last-child) {
     border-bottom: 1px solid #e6e6e6;
-    padding: 50px 0;
+    padding: 30px 0;
+}
+
+form > div > div:only-child {
+    padding: 30px 0 0 0;
 }
 
 form .inputs {
@@ -242,7 +246,7 @@ form .inputs {
 }
 
 form input, form select, form textarea {
-    box-sizing: content-box;
+    box-sizing: border-box;
     padding: 10px;
     width: 90%;
     border: #e6e6e6 2px solid;
@@ -262,11 +266,33 @@ form input[type=file] {
 }
 
 .split {
-    width: 40%;
+    display: inline-flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+    width: 90%;
+}
+
+.split * {
+    width: initial;
+}
+
+.split > div {
+    width: 45%;
+}
+
+.split > div > * {
+    width: 100%;
+    min-width: 70px !important;
 }
 
 form div > h3 {
     width: 30%;
+    margin-top: 0;
+}
+
+.formHelper {
+    font-size: 0.8em;
+    font-style: italic;
 }
 
 /*------ERROR PAGE------*/
