--- a/src/App.css
+++ b/src/App.css
@@ -180,6 +180,10 @@ tr {
     cursor: pointer;
 }
 
+tbody tr:hover {
+    background-color: #f5f5fc;
+}
+
 td, th {
     border-bottom: 1px solid #dddddd;
     text-align: left;
@@ -382,12 +386,12 @@ form .dynamicButton {
     cursor: pointer;
 }
 
-form .sessionDate, form .sessionTime {
+form .sessionDate, form .sessionTime, .eventDetails .eventDate, .eventDetails .eventTime {
     color: var(--main-color-dark);
     font-weight: 800;
 }
 
-form .sessionLocation {
+form .sessionLocation, .eventDetails .eventLocation {
     font-size: 1.2rem;
 }
 
@@ -442,6 +446,38 @@ form div > h3 {
     margin-right: 40px;
     max-width: 35%;
     min-width: 25%;
+}
+
+.eventDetails {
+    border-top: 1px solid rgba(0,0,0,0.2);
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+    margin-left: -1em;
+    margin-right: -1em;
+    display: flex;
+}
+
+.eventDetails img {
+    object-fit: contain;
+    max-height: 150px;
+}
+
+.eventDetails div {
+    margin: 1rem;
+}
+
+.eventDetails .eventMemb {
+    font-size: 0.8rem;
+}
+
+.eventDetails .eventStatus {
+    background-color: #50b4fd;
+    color: white;
+    padding: 5px;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 0.8em;
+    display: inline-block;
+    margin-top: 10px;
 }
 
 /*------ERROR PAGE------*/
